update width issue on mobile

--- a/Mobile/landing/troll-single-landing.css
+++ b/Mobile/landing/troll-single-landing.css
@@ -1,7 +1,7 @@
 #vidtop-content {
 	bottom: 0;
   color: #fff;
-  width: auto;
+  /*width: auto;*/
 }
 .vid-info { position: absolute; bottom: 0; left: 0; width: 90%; background: rgba(0,0,0,0.3); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
